feat: add core modules and expand project documentation
- Add clipboard_utils.py for cross-platform clipboard integration
- Add export_formats.py with support for multiple export formats (JSON, OpenAI, Anthropic, Markdown, LangChain, LlamaIndex)
- Add prompt_history.py for SQLite-based prompt history and favorites management
- Add template_manager.py for YAML-based custom template configuration
- Add token_counter.py for accurate token counting and cost estimation
- Add requirements.txt with project dependencies
- Update main.py with new functionality and module integration
- Expand .gitignore with comprehensive Python, IDE, testing, and environment patterns
- Rewrite README with detailed features, installation instructions, technique descriptions, and usage examples
- Establish foundation for production-ready prompt engineering CLI tool

--- a/README
+++ b/README
@@ -1,23 +1,21 @@
-PROMPT BUILDER
-==============
+# PROMPT BUILDER
 
-A CLI tool for creating exceptional prompts using modern prompt engineering techniques.
+A powerful CLI tool for creating exceptional prompts using modern prompt
+engineering techniques. Features a color-coded interface, prompt history,
+custom templates, and more.
 
+## FEATURES
 
-TECHNIQUES
-----------
+- 7 Prompt Engineering Techniques (CoT, Few-Shot, Role-Based, etc.)
+- Prompt History & Favorites (SQLite storage)
+- Custom Templates (YAML configuration)
+- Prompt Combiner (chain multiple techniques)
+- Token Counter & Cost Estimator
+- Multiple Export Formats (JSON, Markdown, LangChain, etc.)
+- Live Preview Mode
+- Clipboard Integration
 
-- Chain of Thought (CoT)     Step-by-step reasoning
-- Few-Shot Learning          Learn from examples
-- Role-Based                 Expert personas
-- Structured Output          JSON, Markdown, etc.
-- ReAct                      Reasoning + Acting
-- Tree of Thoughts           Multiple solution paths
-- Self-Consistency           Verification via consensus
-
-
-INSTALLATION
-------------
+## INSTALLATION
 
 1. Create and activate a virtual environment:
 
@@ -26,29 +24,68 @@ INSTALLATION
 
 2. Install dependencies:
 
-   pip install rich
+   pip install rich pyyaml tiktoken pyperclip
+
+   Note: Only 'rich' is required. Others are optional:
+
+   - pyyaml: Custom templates
+   - tiktoken: Accurate token counting
+   - pyperclip: Cross-platform clipboard
 
 3. Run the tool:
 
-   python prompt_builder.py
+   python main.py
 
+## TECHNIQUES
 
-PROGRAMMATIC USAGE
-------------------
+1. Chain of Thought Step-by-step reasoning
+2. Few-Shot Learning Learn from examples
+3. Role-Based Expert personas
+4. Structured Output JSON, Markdown, etc.
+5. ReAct Reasoning + Acting
+6. Tree of Thoughts Multiple solution paths
+7. Self-Consistency Verification via consensus
 
-from prompt_builder import quick_build
+## CUSTOM TEMPLATES
+
+Templates are stored in ~/.promptbuilder/templates.yaml
+
+Example template:
+
+templates:
+my_template:
+name: "My Template"
+description: "Does something cool"
+icon: "🚀"
+color: "cyan"
+template: |
+Task: {task}
+Context: {context}
+variables: - task - context
+
+## EXPORT FORMATS
+
+- JSON (API ready)
+- OpenAI Format
+- Anthropic Format
+- Markdown
+- LangChain
+- LlamaIndex
+- Plain Text
+
+## PROGRAMMATIC USAGE
+
+from main import quick_build
 
 prompt = quick_build("cot", task="Explain quantum computing")
 
 prompt = quick_build("role", task="Review this code", role="security engineer")
 
 prompt = quick_build("few_shot", task="Classify sentiment", examples=[
-    {"input": "Great product!", "output": "positive"},
-    {"input": "Waste of money", "output": "negative"}
+{"input": "Great product!", "output": "positive"},
+{"input": "Waste of money", "output": "negative"}
 ])
 
-
-LICENSE
--------
+## LICENSE
 
 MIT
